# aoc-2022

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
aoc/: data.py
aoc/solutions/day01/: _common.py  part1.py  part2.py
aoc/solutions/day02/: _common.py  part1.py  part2.py
aoc/solutions/day03/: part1.py
test/: test_data.py  test_smoke.py
test/solutions/day01/: conftest.py  test_part1.py  test_part2.py
test/solutions/day02/: conftest.py  test_part1.py  test_part2.py
test/solutions/day03/: conftest.py  test_part1.py
